Filter page alignmetn fixed and search box added

--- a/frontend/assets/home.css
+++ b/frontend/assets/home.css
@@ -1,3 +1,11 @@
 .home-component {
   width: 30%;
 }
+
+.employee-detail-table {
+  width: 55%;
+}
+
+.search-box {
+  padding-left: 40px;
+}
